# SDL_image_ttf_template

./: CMakeLists.txt  CMakePresets.json  CMakeProject1.cpp  README.md
.github/workflows/: ci.yml
